apps/external-routes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-routes
  labels:
    app.kubernetes.io/part-of: external-routes
    platform.mousses.xyz/admission: audit
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
